# quickhouse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_transfer.py
crates/etlhouse-core/: Cargo.toml
crates/etlhouse-core/src/: config.rs  ddl.rs  decode.rs  decode_bigquery.rs  decode_mysql.rs  lib.rs  sync.rs  transform.rs  types.rs
crates/etlhouse-core/src/sink/: mod.rs
crates/etlhouse-core/src/source/: mod.rs  postgres.rs
crates/etlhouse-py/: Cargo.toml
crates/etlhouse-py/src/: lib.rs
crates/quickhouse-core/: Cargo.toml
crates/quickhouse-core/src/: archive.rs  config.rs  ddl.rs  decode.rs  decode_bigquery.rs  decode_mysql.rs  error.rs  lib.rs  memory.rs  sync.rs  transform.rs  types.rs
crates/quickhouse-core/src/sink/: bigquery.rs  bigquery_proto.rs  clickhouse.rs  mod.rs
crates/quickhouse-core/src/source/: bigquery.rs  mod.rs  mysql.rs  postgres.rs
crates/quickhouse-py/: Cargo.toml
crates/quickhouse-py/src/: lib.rs
python/etlhouse/: __init__.py  _etlhouse.pyi  progress.py
python/quickhouse/: __init__.py  _quickhouse.pyi  progress.py
tests/: conftest.py  test_mysql_sync.py  test_progress.py  test_s3_archive.py  test_sync.py
