[workspace]
resolver = "2"
members = [
    "crates/quickhouse-core",
    "crates/quickhouse-py",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["quickhouse contributors"]
repository = "https://github.com/mmirzafahmi/quickhouse"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
futures = "0.3"
arrow = { version = "53", features = ["ipc"] }
arrow-array = "53"
arrow-schema = "53"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
rustls-pemfile = "2"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
# default features pull in native-tls/OpenSSL via reqwest; rustls-tls avoids
# that entirely, matching the rest of this workspace's pure-rustls stack.
google-cloud-bigquery = { version = "0.15", default-features = false, features = ["auth", "rustls-tls"] }
google-cloud-googleapis = { version = "0.16", features = ["bigquery"] }
# gRPC transport types (Status/Code) for the Storage Write API error handling.
google-cloud-gax = "0.19"
time = { version = "0.3", features = ["macros"] }
# Only used to encode Binary columns as BigQuery's BYTES JSON representation
# (base64 text) for the insertAll destination path.
base64 = "0.22"
# For the opt-in BigQuery Storage Write API path: prost-types provides the
# runtime protobuf `DescriptorProto`/`FieldDescriptorProto` we build from the
# Arrow schema; prost is used in tests to decode our hand-encoded rows and
# verify the wire format. Pinned to the versions the bigquery crate resolves.
prost = "0.13"
prost-types = "0.13"
# For the opt-in S3 data-lake archival path (ClickHouse destination only):
# pinned to the exact arrow 53.x release line so `RecordBatch`es already
# flowing through this crate's decoders pass straight into the Parquet
# writer with zero conversion — a newer `parquet` would pull in a second,
# incompatible `arrow-array` version (verified via `cargo tree`).
parquet = { version = "53", default-features = false, features = ["arrow", "async", "object_store", "zstd", "snap"] }
# Pinned to exactly the version `parquet` 53.4.0 itself depends on
# (object_store = "0.11.0") — a newer object_store would resolve as a SECOND,
# incompatible copy in the dependency graph (verified: this crate's own
# `ObjectStore`/`Path` types wouldn't type-check against parquet's).
# `aws` feature builds on reqwest/rustls (not native-tls), matching this
# workspace's pure-rustls stack; it also pulls in `aws-lc-rs` as a rustls
# crypto backend, but the process-wide `ring` install in sync.rs already
# handles exactly this "another dependency's rustls backend" scenario.
object_store = { version = "=0.11.2", default-features = false, features = ["aws"] }

# Faster release builds for the shipped wheel.
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
