[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "etlhouse"
version = "0.1.0"
description = "Fast PostgreSQL -> ClickHouse ETL with a Rust engine (parallel, bounded-memory, Arrow-based)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "M Mirza Fahmi", email = "mr.sm1l3yz@gmail.com" }]
keywords = ["etl", "postgresql", "clickhouse", "arrow", "rust", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mmirzafahmi/etl-house"
Repository = "https://github.com/mmirzafahmi/etl-house"
Issues = "https://github.com/mmirzafahmi/etl-house/issues"

[project.optional-dependencies]
test = ["pytest>=7", "psycopg[binary]>=3.1", "clickhouse-connect>=0.7"]

[tool.maturin]
# The compiled extension module lives at etlhouse._etlhouse; the pure-Python
# package under python/ wraps it with a friendly, typed API.
python-source = "python"
module-name = "etlhouse._etlhouse"
manifest-path = "crates/etlhouse-py/Cargo.toml"
features = ["pyo3/extension-module"]
