[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "quickhouse"
version = "0.2.0"
description = "Fast PostgreSQL/MySQL/BigQuery -> ClickHouse ETL with a Rust engine (parallel, bounded-memory, Arrow-based)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "M Mirza Fahmi", email = "mr.sm1l3yz@gmail.com" }]
keywords = ["etl", "postgresql", "mysql", "bigquery", "clickhouse", "arrow", "rust", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mmirzafahmi/quickhouse"
Repository = "https://github.com/mmirzafahmi/quickhouse"
Issues = "https://github.com/mmirzafahmi/quickhouse/issues"

[project.optional-dependencies]
progress = ["tqdm>=4.60"]
test = ["pytest>=7", "psycopg[binary]>=3.1", "pymysql>=1.1", "clickhouse-connect>=0.7", "tqdm>=4.60"]

[tool.maturin]
# The compiled extension module lives at quickhouse._quickhouse; the pure-Python
# package under python/ wraps it with a friendly, typed API.
python-source = "python"
module-name = "quickhouse._quickhouse"
manifest-path = "crates/quickhouse-py/Cargo.toml"
features = ["pyo3/extension-module"]
# Metadata declares License-File: LICENSE (auto-detected), but maturin's
# sdist packaging doesn't bundle root-level files unless told to explicitly.
include = ["LICENSE"]
