[package]
name = "etlhouse-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings exposing etlhouse-core to Python."

[lib]
name = "_etlhouse"
crate-type = ["cdylib"]

[dependencies]
etlhouse-core = { path = "../etlhouse-core" }
pyo3 = { version = "0.22", features = ["abi3-py39"] }
