[package]
name = "quickhouse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for quickhouse: PostgreSQL -> ClickHouse streaming transfer."

[dependencies]
tokio.workspace = true
tokio-postgres.workspace = true
futures.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
reqwest.workspace = true
bytes.workspace = true
tokio-util.workspace = true
async-compression.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rustls.workspace = true
tokio-postgres-rustls.workspace = true
webpki-roots.workspace = true
rustls-pemfile.workspace = true
mysql_async.workspace = true
google-cloud-bigquery.workspace = true
google-cloud-googleapis.workspace = true
time.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
