[package]
name = "quickhouse-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings exposing quickhouse-core to Python."

[lib]
name = "_quickhouse"
crate-type = ["cdylib"]

[dependencies]
quickhouse-core = { path = "../quickhouse-core" }
pyo3 = { version = "0.22", features = ["abi3-py39"] }
tracing-subscriber.workspace = true
